2015-10-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Variables): Document 'nodeline' variable.
	* NEWS: Announce new variables.

2015-10-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Macro Details): Mention problem with index 
	entries.

2015-10-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\part): Set \pchapsepmacro before using 
	\chapmacro to avoid extra blank pages following a part page.

2015-10-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Conditional Commands): Delete words "but 
	without the special historical case".

2015-10-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/man.c (xrefs_of_manpage): Exclude first line of manpage.
	(get_manpage_node): Don't add an extra line to the manpage node.

2015-10-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Overview): Put contents of a footnote in the 
	main text.

2015-10-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\entry) <no page numbers>: Add a \hfill where 
	\indexdotfill would be.  This prevents a short part name being 
	split across lines in a table of contents.

2015-10-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\pdfurl): Define \xprocessmacroarg in case we 
	are in a macro expansion.  Problem with @email used via a @macro 
	in PDF output reported by Arnold Robbins.

2015-10-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/variables.c (info_variables): New user variable 'nodeline'.
	* info/info-utils.c (parse_top_node_line): Depending on value of 
	user variable 'nodeline', include more or less of the nodeline 
	in the displayed node.
	(scan_node_contents): Set inptr after calling parse_top_node_line.
	* info/nodes.c (info_node_of_tag): Check contents field of a tag 
	table entry to see if the node has to be (re-)scanned.  Don't 
	null contents field after scan_node_contents returns.
	* info/session.c (gc_file_buffers_and_nodes): Clear contents 